--- a/__site/menu5/index.html
+++ b/__site/menu5/index.html
@@ -45,6 +45,7 @@
 
 <!-- Content appended here (in class franklin-content) -->
 <div class="franklin-content"><h1 id="selection_of_publications_using_mimi"><a href="#selection_of_publications_using_mimi" class="header-anchor">Selection of Publications Using Mimi</a></h1>
+<p>Prest, B. C., Rennels, L., Errickson, F., &amp; Anthoff, D. &#40;2024&#41;. Equity weighting increases the social cost of carbon. Science, 385&#40;6710&#41;, 715-717.</p>
 <p>Tan, T., Rennels, L., &amp; Parthum, B. &#40;2024&#41;. The social costs of hydrofluorocarbons and the benefits from their expedited phase-down. Nature climate change, 14&#40;1&#41;, 55-60.</p>
 <p>Rennels, L., &amp; Chasins, S. E. &#40;2023&#41;. How domain experts use an embedded DSL. Proceedings of the ACM on Programming Languages, 7&#40;OOPSLA2&#41;, 1499-1530.</p>
 <p>Benveniste, H., Oppenheimer, M., &amp; Fleurbaey, M. &#40;2022&#41;. Climate change increases resource-constrained international immobility. Nature Climate Change, 12&#40;7&#41;, 634-641.</p>
@@ -68,7 +69,7 @@
   <div class="copyright">
     <hr color:grey>
     <br>David Anthoff, Richard Plevin, Cora Kingdon, and Lisa Rennels 
-    <br>Last modified: October 22, 2024 
+    <br>Last modified: October 28, 2024 
     <br>Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a>.
   </div>
 </div>
